dashboard-ingress.yaml
# Ingress example
# To work in Minikube enable the ingress addon: `minikube addons enable ingress`
# Delete the validation web hook: `kubectl delete -A ValidatingWebhookConfiguration ingress-nginx-admission`
# To activate run: `kubectl apply -f dashboard-ingress.yaml`
# To get it work, need to map the corresponding ip address in the /etc/hosts file to dashboard.local 
# Run `kubectl get ingress -n kubernetes-dashboard` to get the ip address
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
           name: kubernetes-dashboard
           port: 
             number: 80
